--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -1,3 +1,4 @@
+abomination ,/n./@憎恨;,/n./@憎惡;,/n./@痛恨;,/n./@厭惡;
 abstraction ,/n./@抽象;
 accommodate ,/v./@容纳;,/v./@使适应;,/v./@适应;,/v./@调节;
 accordingly ,/adv./@因此;
@@ -184,6 +185,7 @@ impersonate ,/v./@假冒;,/v./@冒充;
 impertinent ,/adj./@不適當的;,/adj./@無理的;
 implication ,/n./@含义;,/n./@暗示;
 improvement ,/n./@改善;
+inadvertent ,/adj./@粗心的;,/adj./@无意的;,/adj./@不注意的;,/adj./@怠慢的;
 incantation ,/n./@咒语;,/n./@念咒;
 incarcerate ,/v./@監禁;,/vt./@关押;,/vt./@囚禁;
 incarnation ,/n./@化身;
@@ -256,9 +258,11 @@ parentheses ,/n./@括號;,/n./@圓括號;
 participant ,/adj./@参与的;,/adj./@参与者;
 participate ,/v./@参与;
 partnership ,/n./@夥伴關係;,/n./@合夥;
+patronizing ,/adj./@屈尊俯就的;
 peculiarity ,/n./@特性;,/n./@奇怪;,/n./@怪异;,/n./@奇异;,/n./@古怪;,/n./@怪癖;,/n./@特点;,/n./@蹊跷;
 pedagogical ,/adj./@教育学的;,/adj./@教学法的;
 penetration ,/n./@渗透;
+penultimate ,/adj./@倒数第二的;,/n./@倒數第二;
 performance ,/n./@演出;,/n./@執行;,/n./@性能;
 perfunctory ,/adj./@敷衍的;,/adj./@馬虎的;,/adj./@得過且過的;
 permutation ,/n./@排列;,/n./@置換;
@@ -373,6 +377,7 @@ unfortunate ,/adj./@不幸的;,/adj./@遺憾的;
 unimportant ,/adj./@不重要的;
 universally ,/adv./@普遍地;
 unnecessary ,/adj./@不必要的;
+unrelenting ,/adj./@持续的;,/adj./@未减弱的;,/adj./@不鬆懈的;,/adj./@不屈服的;,/adj./@不屈不撓的;
 unwittingly ,/adv./@不知不覺的;
 venturesome ,/adj./@冒險的;,/adj./@有風險的;,/adj./@危險的;
 whereabouts ,/n./@下落;,/n./@去向;,/n./@所在;,/n./@行蹤;,/adv./@在何處;
