--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -52,6 +52,7 @@ establishment ,/n./@确立;,/n./@制定;
 extermination ,/n./@消灭;,/n./@灭绝;
 extraordinary ,/adj./@特别的;,/adj./@非凡的;
 globalization ,/n./@全球化;
+hallucination ,/n./@幻覺;,/n./@妄想;,/n./@錯覺;
 heterogeneous ,/adj./@多相的;,/adj./@異種的;,/adj./@不均勻的;,/adj./@由不同成分形成的;
 inappropriate ,/adj./@不合适的;
 incarceration ,/n./@監禁;
@@ -91,6 +92,7 @@ reinforcement ,/n./@加强;,/n./@增援;
 righteousness ,/n./@正义;,/n./@公正;
 sadomasochism ,/n./@受虐狂;
 sanctimonious ,/adj./@假裝聖潔的;,/adj./@假裝虔誠的;,/adj./@假裝誠實的;
+schizophrenic ,/adj./@精神分裂症的;,/n./@精神分裂症患者;
 seismological ,/adj./@地震学的;
 semiconductor ,/n./@半導體;
 sophisticated ,/adj./@复杂的;
@@ -101,6 +103,7 @@ supplementary ,/adj./@增补的;
 temperamental ,/adj./@喜怒无常的;,/adj./@性情的;
 topographical ,/adj./@地形的;
 transactional ,/adj./@交易的;,/adj./@事務性的;
+transgression ,/n./@罪過;,/n./@違法;,/n./@違反;,/n./@犯罪;
 transnational ,/adj./@跨国的;
 uncomfortable ,/adj./@不舒服的;
 unconditional ,/adj./@无条件的;
