--- a/Files/lang/ch/chinese3.csv
+++ b/Files/lang/ch/chinese3.csv
@@ -39,7 +39,7 @@ big ,/adj./@大的;
 bin ,/n./@箱;
 bit ,/n./一@點兒;
 bot ,/n./@馬蠅;
-bow ,/v./@鞠躬;
+bow ,/v./@鞠躬;,/n./@弓;,/n./@船頭;,/vt./@弄彎;,/vi./@屈服;,/vi./@彎曲;
 box ,/n./@盒子;
 boy ,/n./@男孩;
 bud ,/n./@萌芽;
@@ -145,7 +145,7 @@ hot ,/adj./@熱;
 how ,/adv./@如何;,/adv./@多麽;,/adv./@怎樣;
 hue ,/n./@色彩;,/n./@色度;,/n./@叫聲;
 hug ,/v./@擁抱;
-hum ,/v./@哼;
+hum ,/v./@哼;,/n./@嗡嗡聲;
 hut ,/n./@茅屋;,/n./@木屋;
 i'm ,/n.v./@我是;
 ice ,/n./@冰;
@@ -314,6 +314,7 @@ toe ,/n./@脚趾;
 tom ,/n./@任何人;,/n./@雄性動物;
 too ,/adv./@太;,/adv./@過于;,/adv./@也;
 top ,/n./@頂;,/n./@端;
+tow ,/vt./@拖;,/vt./@拉;,/vt./@牽引;
 toy ,/n./@玩具;
 try ,/v./@嘗試;
 tub ,/n./@浴盆;,/n./@桶;
