--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -4,6 +4,7 @@ ache ,/v./@疼;,/n./@疼痛;
 acid ,/n./@酸;
 acme ,/n./@頂點;,/n./@極點;
 acre ,/n./@英畝;
+aeon ,/n./@永世;,/n./@萬古;,/n./@極長時期;,/n./@十億年;
 agog ,/adj./@極度興奮的;
 alas ,/int./@唉;,/int./@唉呀;
 ally ,/n./@盟友;,/n./@夥伴;
@@ -448,6 +449,7 @@ host ,/n./@主人;
 hour ,/n./@小時;
 howl ,/v./@嚎叫;,/v./@嚎哭;,/n./@嚎叫;,/n./@嚎哭;
 huge ,/adj./@大的;
+hull ,/n./@船体;,/n./@殼;,/n./@荚;,/n./@皮;,/n./@蒂;,/n./@花萼;
 hunt ,/v./@捕獵;
 hurl ,/v./@猛投;,/v./@猛擲;,/v./@丟下;
 hurt ,/v./@傷害;
@@ -475,6 +477,7 @@ June ,/n./@六月;
 junk ,/n./@垃圾;
 jury ,/n./@陪審團;
 just ,/adv./@只是;,/adv./@僅僅;,/adj./@公正的;
+keel ,/n./@龍骨;
 keen ,/v./@察覺;
 keep ,/v./@保持;
 kelp ,/n./@海藻;,/n./@海草;
@@ -531,7 +534,7 @@ link ,/n./@鏈接;,/v./@相連;
 lint ,/n./@麻布;,/n./@綫頭;,/n./@棉絨;
 lion ,/n./@獅子;
 lips ,/n./@嘴唇;
-list ,/n./@列表;,/n./@清單;
+list ,/n./@列表;,/n./@清單;,/vi./@傾斜;
 lite ,/adj./@清淡的;
 live ,/v./@活著;,/adj./@實況的;
 load ,/n./@負擔;,/n./@負載;,/v./@加載;
@@ -739,7 +742,7 @@ pope ,/n./@教皇;
 pore ,/n./@毛孔;
 pork ,/n./@豬肉;
 porn ,/n./@色情;
-port ,/n./@港口;
+port ,/n./@港口;,/n./@左舷;,/n./@舷窗;,/adj./@左舷的;,/adv./@向左;,/n./@艙口;,/n./@槍眼;,/n./@端口;
 pose ,/v./@造成;,/n./@姿勢;,/v./@擺姿勢;
 post ,/v./@郵寄;,/n./@柱;,/n./@職位;
 pour ,/v./@傾瀉;,/v./@灌;,/v./@注;,/v./@倒;,/v./@流出;
