--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -57,6 +57,7 @@ amble ,/vi./@緩行;
 amend ,/v./@修訂;,/v./@賠償;
 amity ,/n./@友好關係;
 among ,/prep./在...@之間;
+amour ,/n./@偷情;,/n./@私通;,/n./@戀情;
 ample ,/adj./@足夠的;
 amuse ,/vt./@取悅;,/vt./使@快樂;
 angel ,/n./@天使;
@@ -528,6 +529,7 @@ guess ,/v./@猜;
 guest ,/n./@客人;
 guide ,/v./@引導;,/v./@向导;,/n./@向导;,/n./@指南;,/v./@指导;
 guild ,/n./@行會;
+guise ,/n./@外觀;,/n./@外表;,/n./@偽裝;,/n./@形式;,/n./@外貌;,/n./@裝束;
 gulag ,/n./@集中營;
 halve ,/v./@減半;
 hance ,/n./@供腰;
@@ -792,13 +794,14 @@ piker ,/n./@膽小鬼;
 pilot ,/n./@飛行員;
 pinch ,/v./@捏;,/v./@掐;,/v./@擠;
 pious ,/adj./@虔誠的;
-pitch ,/v./@投擲;
+pitch ,/vt./@投擲;,/n./@強度;,/n./@音高;,/n./@场地;,/vt./@投;,/vt./@擲;,/n./@投球;,/n./@傾斜度;,/n./@顛簸;,/vt./@搭@(帳篷);,/vt./@紮@(營);
 pivot ,/n./@樞軸;,/n./@中心點;,/adj./@樞軸的;
 pixel ,/n./@像素;
 place ,/n./@地點;
 plain ,/adj./@原始的;,/adj./@樸素的;,/n./@平原;
 plait ,/n./褶;,/v./@編織;
 plane ,/n./@飛機;
+plank ,/n./@板;,/n./@木板;,/n./@基礎;,/n./@要點;,/n./@政綱;
 plant ,/n./@植物;,/v./@栽培;,/n./@工廠;
 plate ,/n./@盤子;,/n./@盤;
 plead ,/v./@請求;,/v./@乞求;
@@ -806,6 +809,7 @@ pleat ,/v./@打褶;
 pluck ,/v./@拉;,/v./@拽;,/v./@扯;,/n./@勇氣;,/n./@内臟;
 plumb ,/n./@鉛錘;,/n./@垂直;,/v./@探測;,/v./@垂直;
 plume ,/n./@羽毛;
+plush ,/n./@長毛絨;,/n./@厚絨布;,/adj./@长毛绒的;,/adj./@豪華的;,/adj./@奢侈的;
 point ,/v./@指出;
 poise ,/v./@平衡;,/n./@平衡;
 poker ,/n./@撲克;
@@ -1133,7 +1137,7 @@ tempo ,/n./@速度;,/n./@節拍;
 tempt ,/v./@誘惑;
 tense ,/adj./@緊張的;,/n./@時態;
 terra ,/n./@大地;
-terse ,/adj./@簡潔的;,/adj./@精練的;
+terse ,/adj./@簡潔的;,/adj./@精練的;,/adj./@简短的;,/adj./@簡練的;
 thank ,/v./@感謝;
 tharm ,/n./@腸子;
 theft ,/n./@盜竊;
