--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -19,7 +19,7 @@ action ,/n./@行動;,/n./@行爲;
 active ,/adj./@積極的;,/adj./@活躍的;
 actual ,/adj./@眞實的;
 addict ,/v./@沉溺;
-adhere ,/v./@依附;,/v./@粘附;
+adhere ,/v./@依附;,/v./@粘附;,/vi./@遵守;,/vi./@堅持;
 adjust ,/v./@調整;
 admire ,/v./@欽佩;,/v./@仰慕;
 adverb ,/n./@副詞;
@@ -70,7 +70,7 @@ appose ,/vt./@并列;,/vt./@置於@(近處);
 arcana ,/n./@奧秘;,/n./@神秘;
 arcane ,/adj./@神秘的;
 archer ,/n./@弓箭手;
-ardent ,/adj./@熱情的;,/adj./@熱心的;,/adj./@激烈的;
+ardent ,/adj./@熱情的;,/adj./@熱心的;,/adj./@激烈的;,/adj./@熱烈的;
 aren't ,/v./@不是;
 armour ,/n./@盔甲;
 around ,/v./@周圍;
@@ -158,6 +158,7 @@ binary ,/adj./@二進制的;,/adj./@二元的;
 bitter ,/adj./@苦的;
 blazon ,/v./@宣佈;,/v./@裝飾;
 bleach ,/v./@漂白;
+blight ,/n./@枯萎病;,/n./@荒蕪;,/n./@毀壞;,/n./@破壞;
 blonde ,/adj./@金髮碧眼的;,/adj./@白膚金髮碧眼的;,/n./@金髮碧眼的女人;
 blurry ,/adj./@模糊的;,/adj./@不清楚的;,/adj./@污髒的;
 borage ,/n./@紫草科;,/adj./@紫草科的;
@@ -296,6 +297,7 @@ convey ,/v./@傳達;
 convoy ,/v./@護航;,/v./@護送;,/v./@護衛;
 cooker ,/n./@廚具;
 cookie ,/n./@曲奇;,/n./@餅干;
+coolie ,/n./@苦力;
 copper ,/n./@銅;
 cordon ,/n./@警戒綫;,/n./@綬帶;
 corner ,/n./@角落;
@@ -402,6 +404,7 @@ dismal ,/adj./@淒涼的;,/adj./@憂郁的;,/adj./@失落的;
 dismay ,/v./@沮喪;
 dispel ,/vt./@驅散;,/vt./@驅逐;,/vt./@消除;
 disuse ,/v./@廢止;,/n./@廢止;
+divert ,/vt./@轉向;,/vt./@轉移;,/vt./@娛樂;
 divide ,/v./@拆分;
 divine ,/adj./@神聖的;
 doctor ,/n./@醫生;,/n./@博士;
@@ -435,6 +438,7 @@ eleven ,/n./@十一;
 elicit ,/v./@引出;,/v./@引起;,/v./@抽出;,/v./@引發;,/v./@誘發;
 embark ,/v./@從事;,/v./@著手;
 emblem ,/n./@象征;,/n./@标志;,/n./@徽章;,/n./@标记;
+embryo ,/n./@胚胎;,/n./@胚芽;,/n./@萌芽;,/n./@初期;,/n./@胚胎階段;,/n./@萌芽階段;
 emerge ,/v./@出現;
 empire ,/n./@帝國;
 employ ,/v./@雇用;
@@ -553,7 +557,7 @@ Friday ,/n./@星期五;
 fridge ,/n./@冰箱;
 friend ,/n./@朋友;
 fright ,/n./@驚嚇;
-frigid ,/adj./@寒冷的;
+frigid ,/adj./@寒冷的;,/adj./@嚴寒的;,/adj./@冷淡的;,/adj./@性冷淡的;
 fringe ,/n./@邊緣;,/adj./@非主流的;,/n./@流苏;
 frisky ,/adj./@活潑的;
 frugal ,/adj./@節儉的;,/adj./@樸素的;
@@ -719,6 +723,7 @@ killer ,/n./@殺手;
 kindle ,/v./@點燃;
 kitten ,/n./@小貓;
 knight ,/n./@騎士;
+kraken ,/n./@海怪;
 lackey ,/n./@男僕;,/n./@侍從;,/n./@馬屁精;
 ladder ,/n./@梯子;
 lapdog ,/n./@走狗;
@@ -811,6 +816,7 @@ miller ,/n./@磨坊主;
 mingle ,/v./@混合;,/v./@混入;
 minion ,/n./@下屬;,/n./@小卒;,/n./@僕從;,/n./@奴才;,/n./@部下;,/n./@寵兒;,/n./@寵臣;
 minute ,/n./@分鍾;
+mirage ,/n./@海市蜃樓;,/n./@幻景;,/n./@幻象;,/n./@妄想;
 mirror ,/n./@鏡子;
 misery ,/v./@苦難;
 mishap ,/n./@厄運;
@@ -1018,6 +1024,7 @@ ranger ,/n./@巡邏員;
 raptor ,/n./@肉食鸟;,/n./@猛禽;,/n./@猛龙;
 rarely ,/adj./@不經常的;
 rascal ,/n./@流氓;,/n./@惡棍;,/n./@無賴;
+raster ,/n./@光柵;
 rather ,/adv./@相當;,/adv./@寧願;,/adv./@更;
 ratify ,/v./@批准;,/v./@認可;
 ration ,/n./@配給;,/n./@定量;,/n./@口糧;
@@ -1264,7 +1271,7 @@ stench ,/n./@惡臭;
 stereo ,/n./@立體聲;
 sticky ,/adj./@棘手的;
 stifle ,/v./@扼殺;,/v./@窒息;,/v./@藏匿;
-stigma ,/n./@恥辱;,/n./@污名;
+stigma ,/n./@恥辱;,/n./@污名;,/n./@污點;,/n./@柱頭;,/n./@眼點;
 stocky ,/adj./@矮胖的;
 stoned ,/v./@擲石頭;,/adj./@去核的;,/adj./@醉酒的;
 storey ,/n./@樓層;
@@ -1280,6 +1287,7 @@ string ,/n./@綫;,/n./@繩;,/n./@串;
 stripe ,/n./@條紋;,/n./@臂章;,/n./@军衔;,/n./@軍階條;,/n./@斑紋;,/n./@类型;
 strive ,/v./@努力;,/v./@力求;
 stroke ,/n./@中風;,/v./@擊;,/v./@敲;,/v./@撫摸;,/n./@壁畫;,/v./@劃槳;
+stroll ,/n./@散步;,/n./@閒逛;,/n./@流浪;,/v./@散步;,/vi./@閒逛;,/vi./@流浪;
 strong ,/adj./@強的;
 studio ,/n./@工作室;
 stupid ,/adj./@笨的;
@@ -1434,7 +1442,7 @@ vertex ,/n./@頂點;
 vessel ,/n./@船;,/n./@艦;,/n./@血管;,/n./@容器;
 viable ,/adj./@可行的;,/adj./@可存活的;,/adj./@可生育的;
 victim ,/n./@受害者;
-vilify ,/v./@誹謗;,/v./@辱駡;
+vilify ,/v./@誹謗;,/v./@辱駡;,/vt./@诋毁;
 violet ,/n./@紫羅蘭;,/n./@紫色;,/adj./@紫色的;
 violin ,/n./@小提琴;
 virgin ,/n./@處女;
