--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -233,6 +233,7 @@ collate ,/v./@整理;,/v./@核對;,/v./@校對;
 collect ,/v./@收集;
 college ,/n./@大學;,/n./@學院;
 collide ,/v./@碰撞;,/v./@衝突;,/v./@抵觸;
+colonel ,/n./@上校;,/n./@陸軍上校;
 combine ,/v./@結合;
 comical ,/adj./@滑稽的;
 command ,/v./@命令;
@@ -378,6 +379,7 @@ diction ,/n./@措辭;
 digital ,/adj./@數字的;
 dignity ,/n./@尊嚴;
 digress ,/v./@離題;,/v./@跑題;
+diorama ,/n./@透视模型;,/n./@立體模型;,/n./@仿真模型;,/n./@透视缩影;,/n./@透視圖畫;
 diploma ,/n./@畢業文憑;,/n./@學位證書;
 disable ,/v./@致殘;,/v./使@失去能力;
 disband ,/v./@解散;,/v./@遣散;
@@ -630,6 +632,7 @@ inhabit ,/v./@居住;
 inherit ,/v./@繼承;,/v./@遺傳;
 inhibit ,/v./@抑制;
 initial ,/adj./@初始的;
+inquest ,/n./@驗屍;,/n./@審訊;,/n./@審理;,/n./@調查;,/n./@審查;
 inquire ,/v./@詢問;
 inquiry ,/n./@詢問;,/n./@查詢;,/n./@調查;
 insider ,/n./@内部人員;,/n./@知情者;
@@ -885,6 +888,7 @@ pompous ,/adj./@自大的;,/adj./@浮誇的;,/adj./@華而不實的;
 popcorn ,/n./@爆米花;
 popular ,/adj./@流行的;,/adj./@受歡迎的;
 portion ,/n./@分配;
+portray ,/vt./@畫;,/vt./@描繪;,/vt./@描寫;,/vt./@扮演;,/vt./@描述;,/vt./@塑造;
 possess ,/v./@擁有;,/v./@佔有;
 postage ,/n./@郵資;
 postfix ,/n./@后綴;
@@ -1093,9 +1097,11 @@ smuggle ,/v./@走私;
 snuggle ,/v./@緊抱;,/v./@偎依;
 society ,/n./@社會;
 soddish ,/adj./@糟糕的;,/adj./@極壞的;
+sojourn ,/n./@逗留;,/vi./@逗留;,/n./@旅居;,/vi./@旅居;
 soldier ,/n./@士兵;
 solicit ,/v./@征求;,/v./@招攬;
 solvent ,/adj./@有償付能力的;,/adj./@有溶解力的;,/n./@溶劑;
+somatic ,/adj./@軀體的;,/adj./@身體的;,/adj./@肉体的;,/adj./@細胞體的;
 somehow ,/adv./@以某種方式;
 someone ,/n./@有人;,/n./@某人;
 souffle ,/n./@蛋奶酥;
@@ -1177,7 +1183,7 @@ ternary ,/adj./@三元的;,/adj./@三進制的;
 terrace ,/n./@平臺;,/n./@臺階;
 terrain ,/n./@地形;,/n./@地勢;
 terrify ,/vt./@恐嚇;
-testify ,/v./@證明;,/v./@證實;
+testify ,/v./@證明;,/v./@證實;,/v./@作證;
 tetanus ,/n./@破伤风;
 textile ,/n./@紡織品;
 texture ,/n./@質地;,/n./@紋理;,/n./@結構;,/n./@本質;
