--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -302,6 +302,7 @@ dialogue ,/n./@對話;,/v./@對話;
 diameter ,/n./@直径;
 diaspora ,/n./@大流散;,/n./@海外犹太人;,/n./@背井离乡的人们;
 dictator ,/n./@獨裁者;
+dilation ,/n./@擴張;,/n./@擴大;
 diligent ,/adj./@努力的;
 diminish ,/v./@减少;,/v./@縮小;
 dinosaur ,/n./@恐龙;
@@ -331,7 +332,7 @@ distance ,/n./@距离;
 distaste ,/v./@厭惡;
 distinct ,/adj./@差别明显的;
 distract ,/v./@分心;
-distress ,/v./使@痛苦;,/v./使@悲伤;,/n./@痛苦;,/n./@悲伤;
+distress ,/v./使@痛苦;,/v./使@悲伤;,/n./@痛苦;,/n./@悲伤;,/n./@悲痛;,/n./@危難;
 district ,/n./@区;
 dividend ,/n./@分红;
 division ,/n./@分开;
@@ -496,6 +497,7 @@ handsome ,/adj./@帅气的;
 headache ,/n./@头痛;
 headline ,/n./@头条;
 hedgehog ,/n./@刺猬;
+hegemony ,/n./@霸權;,/n./@領導權;
 henchman ,/n./@亲信;,/n./@黨羽;,/n./@爪牙;,/n./@幫兇;,/n./@侍从;
 heraldry ,/n./@纹章学;,/n./@盛典;
 heritage ,/n./@遗产;,/n./@传统;
@@ -709,6 +711,7 @@ obstacle ,/n./@障碍;,/n./@阻碍;
 obstruct ,/v./@阻塞;
 occasion ,/n./@时机;,/n./@机会;
 occident ,/n./@西方;
+occupant ,/n./@佔有人;,/n./@居住者;,/n./@乘坐者;,/n./@占用者;,/n./@任职者;
 odometer ,/n./@里程表;
 offshore ,/adj./@離岸的;,/adj./@近海的;
 oligarch ,/n./@寡頭;,/n./@寡頭執政者;
@@ -741,7 +744,8 @@ overlook ,/v./@忽视;
 overpass ,/vt./@天桥;
 override ,/v./@不顧;,/v./@忽略;,/v./@踐踏;,/v./@推翻;
 overtake ,/v./@超过;
-overturn ,/v./@推翻;
+overtone ,/n./@泛音;,/n./@弦外之音;,/n./@言外之意;
+overturn ,/v./@推翻;,/vt./@翻倒;,/vt./@顛覆;,/vt./@掀翻;
 paganism ,/n./@异教;
 painting ,/n./@绘画;
 Paladins ,/n./@圣骑士;
@@ -807,7 +811,7 @@ premiere ,/v./@初次公演;
 preserve ,/v./@保护;,/v./@维持;,/v./@保存;
 pressing ,/adj./@急迫的;
 pressure ,/n./@压力;
-prestige ,/n./@威望;,/n./@聲望;
+prestige ,/n./@威望;,/n./@聲望;,/n./@名望;
 previous ,/adj./@之前的;
 priority ,/n./@优先;
 pristine ,/adj./@原始的;,/adj./@古時的;,/adj./@淳樸的;
@@ -929,6 +933,7 @@ shopping ,/n./@購物;
 shortage ,/n./@不足;,/n./@缺少;
 shortcut ,/n./@捷徑;
 shoulder ,/n./@肩;
+showcase ,/n./@陳列櫃;,/n./@展示场所;,/vt./@展示;,/vt./@展現;,/vt./@陳列;,/vt./@亮相;
 simplify ,/v./@简化;
 simulate ,/v./@模仿;
 simulink ,/n./@模型;,/n./@仿真软件;
@@ -1080,6 +1085,7 @@ vertical ,/adj./@垂直的;,/adj./@竖的;
 vibrancy ,/n./@震動;,/n./@活力;
 vicinity ,/n./@附近;,/n./@邻近;
 vigilant ,/adj./@警惕的;,/adj./@警戒的;,/adj./@警醒的;
+vignette ,/n./@片段;,/n./@短文;,/n./@小插曲;,/n./@花絮;,/n./@圖案;,/n./@蔓藤花樣;,/n./@小花饰;
 vigorous ,/adj./@精力充沛的;
 violence ,/n./@暴力;
 visional ,/adj./@虚幻的;,/adj./@视力的;
