--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -83,6 +83,7 @@ battleship
 beforehand
 beneficial
 benevolent
+binoculars
 biological
 bitterness
 blundering
@@ -318,6 +319,7 @@ historical
 hodgepodge
 homologous
 horizontal
+horrendous
 hysterical
 illuminate
 illuminati
@@ -410,6 +412,7 @@ monochroic
 monochrome
 monogamous
 monopolize
+monotheism
 monotheist
 monotonous
 motivation
@@ -610,6 +613,7 @@ understand
 unexpected
 unilateral
 university
+unorthodox
 unreliable
 unsatiable
 untethered
