--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -1,3 +1,4 @@
+abomination
 abstraction
 accommodate
 accordingly
@@ -184,6 +185,7 @@ impersonate
 impertinent
 implication
 improvement
+inadvertent
 incantation
 incarcerate
 incarnation
@@ -256,9 +258,11 @@ parentheses
 participant
 participate
 partnership
+patronizing
 peculiarity
 pedagogical
 penetration
+penultimate
 performance
 perfunctory
 permutation
@@ -373,6 +377,7 @@ unfortunate
 unimportant
 universally
 unnecessary
+unrelenting
 unwittingly
 venturesome
 whereabouts
