--- a/Files/lang/en/english12.csv
+++ b/Files/lang/en/english12.csv
@@ -71,6 +71,7 @@ discriminate
 dissemblance
 distillation
 distribution
+dodecahedron
 emancipation
 embarrassing
 encroachment
@@ -129,6 +130,7 @@ metaphysical
 metropolitan
 misquotation
 modification
+monotheistic
 narcissistic
 nevertheless
 notification
@@ -157,9 +159,11 @@ proportional
 prostitution
 protuberance
 purification
+quadriplegic
 questionable
 reassignment
 recognizable
+recollection
 recreational
 refrigerator
 registration
