--- a/Files/lang/en/english13.csv
+++ b/Files/lang/en/english13.csv
@@ -52,6 +52,7 @@ establishment
 extermination
 extraordinary
 globalization
+hallucination
 heterogeneous
 inappropriate
 incarceration
@@ -91,6 +92,7 @@ reinforcement
 righteousness
 sadomasochism
 sanctimonious
+schizophrenic
 seismological
 semiconductor
 sophisticated
@@ -101,6 +103,7 @@ supplementary
 temperamental
 topographical
 transactional
+transgression
 transnational
 uncomfortable
 unconditional
