--- a/Files/lang/en/english4.csv
+++ b/Files/lang/en/english4.csv
@@ -4,6 +4,7 @@ ache
 acid
 acme
 acre
+aeon
 agog
 alas
 ally
@@ -448,6 +449,7 @@ host
 hour
 howl
 huge
+hull
 hunt
 hurl
 hurt
@@ -475,6 +477,7 @@ June
 junk
 jury
 just
+keel
 keen
 keep
 kelp
