--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -57,6 +57,7 @@ amble
 amend
 amity
 among
+amour
 ample
 amuse
 angel
@@ -528,6 +529,7 @@ guess
 guest
 guide
 guild
+guise
 gulag
 halve
 hance
@@ -799,6 +801,7 @@ place
 plain
 plait
 plane
+plank
 plant
 plate
 plead
@@ -806,6 +809,7 @@ pleat
 pluck
 plumb
 plume
+plush
 point
 poise
 poker
