--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -158,6 +158,7 @@ binary
 bitter
 blazon
 bleach
+blight
 blonde
 blurry
 borage
@@ -296,6 +297,7 @@ convey
 convoy
 cooker
 cookie
+coolie
 copper
 cordon
 corner
@@ -402,6 +404,7 @@ dismal
 dismay
 dispel
 disuse
+divert
 divide
 divine
 doctor
@@ -435,6 +438,7 @@ eleven
 elicit
 embark
 emblem
+embryo
 emerge
 empire
 employ
@@ -719,6 +723,7 @@ killer
 kindle
 kitten
 knight
+kraken
 lackey
 ladder
 lapdog
@@ -811,6 +816,7 @@ miller
 mingle
 minion
 minute
+mirage
 mirror
 misery
 mishap
@@ -1018,6 +1024,7 @@ ranger
 raptor
 rarely
 rascal
+raster
 rather
 ratify
 ration
@@ -1280,6 +1287,7 @@ string
 stripe
 strive
 stroke
+stroll
 strong
 studio
 stupid
