--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -233,6 +233,7 @@ collate
 collect
 college
 collide
+colonel
 combine
 comical
 command
@@ -378,6 +379,7 @@ diction
 digital
 dignity
 digress
+diorama
 diploma
 disable
 disband
@@ -630,6 +632,7 @@ inhabit
 inherit
 inhibit
 initial
+inquest
 inquire
 inquiry
 insider
@@ -885,6 +888,7 @@ pompous
 popcorn
 popular
 portion
+portray
 possess
 postage
 postfix
@@ -1093,9 +1097,11 @@ smuggle
 snuggle
 society
 soddish
+sojourn
 soldier
 solicit
 solvent
+somatic
 somehow
 someone
 souffle
