--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -302,6 +302,7 @@ dialogue
 diameter
 diaspora
 dictator
+dilation
 diligent
 diminish
 dinosaur
@@ -496,6 +497,7 @@ handsome
 headache
 headline
 hedgehog
+hegemony
 henchman
 heraldry
 heritage
@@ -709,6 +711,7 @@ obstacle
 obstruct
 occasion
 occident
+occupant
 odometer
 offshore
 oligarch
@@ -741,6 +744,7 @@ overlook
 overpass
 override
 overtake
+overtone
 overturn
 paganism
 painting
@@ -929,6 +933,7 @@ shopping
 shortage
 shortcut
 shoulder
+showcase
 simplify
 simulate
 simulink
@@ -1080,6 +1085,7 @@ vertical
 vibrancy
 vicinity
 vigilant
+vignette
 vigorous
 violence
 visional
