--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -10,6 +10,7 @@ accompany
 acquiesce
 addiction
 addictive
+adherence
 adjective
 admirable
 adornment
@@ -247,6 +248,7 @@ delicious
 delimiter
 delirious
 demanding
+demeanour
 democracy
 departure
 dependent
@@ -314,6 +316,7 @@ elevation
 eliminate
 elsewhere
 elucidate
+emanation
 embarrass
 embroider
 emergence
@@ -436,6 +439,7 @@ homegrown
 homemaker
 honeycomb
 hostility
+hubristic
 humiliate
 hurricane
 hydraulic
@@ -547,8 +551,10 @@ matrimony
 meanwhile
 mechanics
 mechanism
+melodrama
 menstrual
 mesmerize
+messianic
 metabolic
 meteorite
 methodism
@@ -605,6 +611,7 @@ palanquin
 palatable
 panoramic
 pansexual
+pantomime
 parabolic
 parachute
 paragraph
@@ -704,6 +711,7 @@ quarterly
 quintuple
 quotation
 radiation
+rasterize
 rationale
 realistic
 rebellion
@@ -790,6 +798,7 @@ sincerely
 situation
 skeptical
 slaughter
+socialite
 solicitor
 something
 sometimes
@@ -798,12 +807,14 @@ specially
 spectacle
 spectator
 speculate
+spherical
 spiritual
 spongebob
 spotlight
 sprightly
 stability
 stalemate
+starboard
 statement
 stateside
 statistic
