--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -83,6 +83,7 @@ battleship ,/n./@战舰;,/n./@战列舰;
 beforehand ,/adv./@提前;,/adv./@事先;
 beneficial ,/adj./@有益的;
 benevolent ,/adj./@仁慈的;,/adj./@樂善好施的;,/adj./@慈善的;
+binoculars ,/n./@双筒望远镜;
 biological ,/adj./@生物学的;
 bitterness ,/n./@苦;,/n./@苦痛;,/n./@苦難;
 blundering ,/adj./@浮躁的;
@@ -318,6 +319,7 @@ historical ,/adj./历史的;,/adj./@历史学的;
 hodgepodge ,/n./@大雜燴;
 homologous ,/adj./@相應的;,/adj./@同源的;,/adj./@類似的;
 horizontal ,/adj./@水平的;,/adj./@横的;
+horrendous ,/adj./@骇人的;,/adj./@可怕的;,/adj./@令人震惊的;,/adj./@極糟的;,/adj./@糟透了的;
 hysterical ,/adj./@異常興奮的;,/adj./@歇斯底裏的;
 illuminate ,/v./@照明;
 illuminati ,/n./@光照派;
@@ -410,6 +412,7 @@ monochroic ,/adj./@單色的;
 monochrome ,/n./@單色;,/adj./@單色的;,/adj./@黑白的;
 monogamous ,/adj./@單一配偶的;
 monopolize ,/vt./@垄断;
+monotheism ,/n./@一神論;,/n./@一神教;
 monotheist ,/n./@一神论者;
 monotonous ,/adj./@单调的;
 motivation ,/n./@动力;
@@ -441,7 +444,7 @@ parametric ,/n./@參數;
 paranormal ,/adj./@超自然的;,/adj./@超常的;
 paraphrase ,/v./@釋義;,/v./@改述;
 participle ,/n./@分詞;
-particular ,/adj./特定的;,/adj./@特殊的;,/adj./@挑剔的;
+particular ,/adj./特定的;,/adj./@特殊的;,/adj./@挑剔的;,/n./@细节;,/n./@詳細情況;
 passionate ,/adj./@热烈的;
 peacefully ,/adv./@平静的;,/adv./@和平的;
 pedestrian ,/adj./@徒步的;,/n./@行人;
@@ -610,6 +613,7 @@ understand ,/v./@明白;,/v./@懂得;
 unexpected ,/adj./@意外的;
 unilateral ,/adj./@单方面的;
 university ,/n./@大學;
+unorthodox ,/adj./@非正統的;,/adj./@非傳統的;,/adj./@不正規的;,/adj./@異教的;,/adj./@另类的;
 unreliable ,/adj./@不可靠的;
 unsatiable ,/adj./@不知足的;,/adj./@貪得無厭的;
 untethered ,/adj./@不受限的;
