--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -71,6 +71,7 @@ discriminate ,/vt./@歧視;,/vt./@辨別;,/vt./@區別;,/vi./@辨別;
 dissemblance ,/n./@偽裝;
 distillation ,/n./@蒸餾;
 distribution ,/n./@分布;,/n./@分配;
+dodecahedron ,/n./@十二面体;
 emancipation ,/n./@解放;
 embarrassing ,/adj./@令人尴尬的;
 encroachment ,/n./@侵犯;,/n./@蚕食;
@@ -129,6 +130,7 @@ metaphysical ,/adj./@形而上学的;,/adj./@超自然的;,/adj./@玄学的;,/ad
 metropolitan ,/n./@大都市;
 misquotation ,/n./@误引;
 modification ,/n./@修正;
+monotheistic ,/adj./@一神論的;,/adj./@一神教的;
 narcissistic ,/adj./@孤芳自赏的;
 nevertheless ,/conj./@尽管如此;
 notification ,/n./@通知;
@@ -149,7 +151,7 @@ perspiration ,/n./@流汗;
 perturbation ,/n./@攝動;,/n./@擾亂;,/n./@不安;
 plausibility ,/n./@貌似合理;,/n./@貌似可信;,/n./@可信度;
 possiblility ,/n./@可能性;
-predilection ,/n./@偏好;
+predilection ,/n./@偏好;,/n./@偏爱;,/n./@嗜好;
 prerequisite ,/n./@先決條件;,/adj./@首要必備的;
 presentation ,/n./@展示;,/n./@提供;,/n./@表演;
 professional ,/adj./@专业的;,/adj./@职业的;
@@ -157,9 +159,11 @@ proportional ,/adj./@成比例的;
 prostitution ,/n./@賣淫;
 protuberance ,/n./@隆起;,/n./@隆起物;,/n./@凸出物;,/n./@突出物;
 purification ,/n./@净化;,/n./@提純;
+quadriplegic ,/adj./@四肢瘫痪的;,/n./@四肢瘫痪者;
 questionable ,/adj./@可疑的;
 reassignment ,/n./@再分配;,/n./@再指派;,/n./@再指定;,/n./@重新分配;
 recognizable ,/adj./@可辨認的;,/adj./@可認出的;,/adj./@可承認的;
+recollection ,/n./@回憶;,/n./@記憶;,/n./@回憶錄;,/n./@往事;,/n./@記憶力;
 recreational ,/adj./@消遣的;,/adj./@娛樂的;,/adj./@修養的;
 refrigerator ,/n./@冰箱;
 registration ,/n./@登记;,/n./@注册;
