--- a/Files/lang/ch/chinese14.csv
+++ b/Files/lang/ch/chinese14.csv
@@ -27,6 +27,7 @@ representitive ,/n./@代表;
 responsibility ,/n./@责任;
 simultaneously ,/adv./@同时地;
 sustainability ,/n./@可持續性;,/n./@永續性;
+transcendental ,/adj./@先驗的;,/adj./@卓越的;,/adj./@超自然的;,/adj./@超凡的;,/adj./@超越的;,/adj./@人智所不及的;
 transformation ,/n./@轉化;,/n./@轉變;
 transportation ,/n./@运输;,/n./@运输系统;,/n./@运输工具;,/n./@流放;
 unrecognizable ,/adj./@無法認出的;,/adj./@未被承認的;
