--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -10,6 +10,7 @@ accompany ,/v./@陪伴;
 acquiesce ,/v./@默许;,/v./@勉强同意;
 addiction ,/n./@成瘾;
 addictive ,/adj./@上瘾的;
+adherence ,/n./@信奉;,/n./@堅持;,/n./@堅守;,/n./@固執;,/n./@依附;,/n./@遵守;,/n./@遵循;,/n./@信守;,/n./@黏附;
 adjective ,/n./@形容词;
 admirable ,/adj./@令人欽佩的;
 adornment ,/n./@裝飾;,/n./@裝飾品;
@@ -205,7 +206,7 @@ contented ,/adj./@满足的;
 continent ,/n./@大陸;,/adj./@節制的;
 continual ,/adj./@不间断的;,/adj./@连续的;
 continuum ,/n./@連續體;,/n./@漸變體;
-conundrum ,/n./@难题;,/n./@谜语;
+conundrum ,/n./@难题;,/n./@谜语;,/n./@字谜;
 convivial ,/adj./@欢乐的;,/adj./@欢宴的;
 copyright ,/n./@版权;
 corporate ,/n./@法人的;
@@ -220,7 +221,7 @@ crocodile ,/n./@鳄鱼;
 crossfire ,/n./@交叉火力;,/n./@激烈交锋;
 crossword ,/n./@纵横字谜;
 cruciform ,/adj./@十字形的;
-culminate ,/vi./@告终;
+culminate ,/vi./@告终;,/vi./@達到高潮;,/vi./@達到頂點;
 cultivate ,/v./@培养;
 curiosity ,/n./@好奇心;,/n./@好奇;
 currently ,/adv./@目前;
@@ -247,6 +248,7 @@ delicious ,/adj./@美味的;
 delimiter ,/n./@定界符;,/n./@分隔符;
 delirious ,/adj./@瘋狂的;,/adj./@精神錯亂的;
 demanding ,/adj./@要求严苛的;
+demeanour ,/n./@舉止;,/n./@風度;,/n./@舉動;,/n./@行為;
 democracy ,/n./@民主;,/n./@民主主义;
 departure ,/n./@离开;,/n./@出发;,/n./@违背;
 dependent ,/n./@依赖性的;
@@ -314,6 +316,7 @@ elevation ,/n./@海拔;,/n./@提高;,/n./@崇高;
 eliminate ,/v./@消除;,/v./@排除;
 elsewhere ,/adv./@在别处;
 elucidate ,/v./@闡明;
+emanation ,/n./@散发;,/n./@喷发;,/n./@表現;,/n./@顯示;
 embarrass ,/v./使@尴尬;
 embroider ,/v./@刺綉;,/v./@裝飾;,/v./@鑲邊;,/vi./@綉花;
 emergence ,/n./@出现;
@@ -436,6 +439,7 @@ homegrown ,/adj./@本土的;,/adj./@國產的;,/adj./@自家種植的;
 homemaker ,/n./@主妇;
 honeycomb ,/n./@蜂巢;
 hostility ,/n./@敵意;,/n./@敵對;
+hubristic ,/adj./@傲慢的;,/adj./@自大的;,/adj./@自恃的;
 humiliate ,/v./@羞辱;
 hurricane ,/n./@颶風;
 hydraulic ,/adj./@水力的;,/adj./@液压的;
@@ -547,8 +551,10 @@ matrimony ,/n./@結婚;,/n./@婚禮;,/n./@婚姻;
 meanwhile ,/adv./@同时;
 mechanics ,/n./@力学;,/n./@机械学;
 mechanism ,/n./@机制;
+melodrama ,/n./@情節劇;,/n./@戏剧性事件;,/n./@傳奇劇;
 menstrual ,/adj./@月经的;
 mesmerize ,/v./@吸引;
+messianic ,/adj./@彌賽亞的;,/adj./@救世主的;,/adj./@信奉救世主的;
 metabolic ,/adj./@变化的;,/adj./@新陈代谢的;
 meteorite ,/n./@隕石;
 methodism ,/n./@衛理宗教義;,/n./@循道宗教義;
@@ -605,6 +611,7 @@ palanquin ,/n./@轎子;,/n./@肩輿;
 palatable ,/adj./@美味的;,/adj./@可口的;
 panoramic ,/adj./@全景的;,/adj./@概括的;
 pansexual ,/adj./@泛性的;
+pantomime ,/n./@啞劇;,/n./@圣诞童话剧;
 parabolic ,/adj./@抛物线的;
 parachute ,/n./@降落傘;
 paragraph ,/n./@段落;,/n./@節;
@@ -704,6 +711,7 @@ quarterly ,/n./@季刊;
 quintuple ,/adj./@五倍的;
 quotation ,/n./@引用;
 radiation ,/n./@輻射;,/n./@放射;
+rasterize ,/vt./@光柵化;,/vt./@像素化;
 rationale ,/n./@根本原因;,/n./@逻辑依据;
 realistic ,/adj./@逼真的;,/adj./@实际的;
 rebellion ,/n./@反叛;,/n./@叛乱;
@@ -758,7 +766,7 @@ salvation ,/n./@拯救;
 sanctuary ,/n./@避難所;,/n./@至聖所;,/n./@神殿;
 sarcastic ,/adj./@挖苦的;,/adj./@讽刺的;
 satisfied ,/adj./@感到滿意的;
-schematic ,/adj./@图解的;,/adj./@概要的;
+schematic ,/adj./@图解的;,/adj./@概要的;,/adj./@示意的;,/adj./@圖示的;,/adj./@概略的;
 scientist ,/n./@科学家;
 scrutable ,/adj./@可以了解的;
 sculpture ,/n./@雕塑;
@@ -790,6 +798,7 @@ sincerely ,/adj./@真诚地;
 situation ,/n./@情况;
 skeptical ,/adj./@懷疑的;,/adj./@懷疑論的;
 slaughter ,/n./@屠殺;
+socialite ,/n./@社會名流;,/n./@社交界名流;
 solicitor ,/n./@律師;
 something ,/n./@某些事;,/n./@某事;
 sometimes ,/adv./@有時;,/adv./@不時;
@@ -798,12 +807,14 @@ specially ,/adj./@特别的;
 spectacle ,/n./@場面;
 spectator ,/n./@旁观者;,/n./@观众;
 speculate ,/v./@推测;
+spherical ,/adj./@球形的;,/adj./@球的;,/adj./@球面的;,/adj./@球体的;,/adj./@天體的;,/adj./@圓的;
 spiritual ,/adj./@精神的;,/adj./@虔诚的;
 spongebob ,/n./@海绵宝宝;
 spotlight ,/n./@聚光燈;,/v./@聚光;
 sprightly ,/adv./@活潑地;,/adj./@活潑的;,/adj./@愉快的;
 stability ,/n./@穩定性;
 stalemate ,/n./@僵局;,/n./@困境;
+starboard ,/n./@右舷;,/n./@右侧;
 statement ,/n./@聲明;,/n./@陳述;,/n./@口供;
 stateside ,/adj./@在美国的;,/adv./@在美国;,/adv./@向美国;
 statistic ,/n./@资料;,/n./@统计数据;
@@ -838,7 +849,7 @@ temporary ,/adj./@临时的;
 tentative ,/adj./@試探性的;
 terminate ,/vt./@终止;,/vt./@结束;,/vt./@停止;,/vt./@解雇;
 territory ,/n./@领地;
-tesseract ,/n./@四次元立方體;
+tesseract ,/n./@四次元立方體;,/n./@超立方體;,/n./@四維立方體;
 theocracy ,/n./@神權政體;
 therefore ,/conj.//adv./@因此;
 thesaurus ,/n./@寶庫;,/n./@同義詞詞典;,/n./@類屬詞典;,/n./@主題詞表;
