--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -174,6 +174,7 @@ brood ,/n./@窩;,/v./@孵;,/v./@沉思;
 broom ,/n./@掃帚;
 brown ,/adj./@棕色的;
 brush ,/n./@刷;
+brute ,/n./@畜生;,/n./@獸;,/adj./@畜生般的;,/adj./@殘忍的;
 build ,/v./@建築;
 built ,/v./@建造@<build>;
 bully ,/v./@欺負;,/n./@惡霸;
@@ -1135,6 +1136,7 @@ tease ,/v./@取笑;,/v./@戲弄;
 teeth ,/n./@牙齒;
 tempo ,/n./@速度;,/n./@節拍;
 tempt ,/v./@誘惑;
+tenor ,/n./@要旨;,/n./@趨向;,/n./@男高音;,/n./@次中音;,/n./@基调;
 tense ,/adj./@緊張的;,/n./@時態;
 terra ,/n./@大地;
 terse ,/adj./@簡潔的;,/adj./@精練的;,/adj./@简短的;,/adj./@簡練的;
@@ -1192,7 +1194,7 @@ trash ,/n./@垃圾;
 trawl ,/v./@拖網;,/v./@拖網捕魚;
 tread ,/v./@踏;,/v./@踩;,/n./@胎面;,/n./@鞋底;,/n./@踏;
 treat ,/vt./@對待;,/v./@醫治;
-trend ,/n./@趨勢;
+trend ,/n./@趨勢;,/n./@趨向;,/n./@傾向;,/n./@走向;,/vi./@趨向;,/vi./@傾向;
 trial ,/n./@試驗;,/n./@嘗試;
 trick ,/n./@詭計;,/n./@竅門;,/v./@欺詐;,/v./@哄騙;
 troll ,/v./@輪唱;,/v./@拖餌釣魚;,/n./@輪唱;,/n./@拖餌釣魚;
