--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -1132,7 +1132,7 @@ sandal ,/n./@凉鞋;
 satire ,/n./@諷刺;,/n./@譏諷;
 saturn ,/n./@農神;,/n./@土星;
 saucer ,/n./@茶碟;
-savage ,/adj./@野蛮的;,/adj./@残酷的;,/adj./@狂怒的;,/adj./@荒凉的;
+savage ,/adj./@野蛮的;,/adj./@残酷的;,/adj./@狂怒的;,/adj./@荒凉的;,/vt./@激烈抨擊;
 scarce ,/adj./@缺乏的;
 scathe ,/v./@損傷;,/v./@損害;,/n./@損傷;,/n./@損害;
 schema ,/n./@模式;,/n./@计划;,/n./@图解;,/n./@概要;
