--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -174,6 +174,7 @@ brood
 broom
 brown
 brush
+brute
 build
 built
 bully
@@ -1135,6 +1136,7 @@ tease
 teeth
 tempo
 tempt
+tenor
 tense
 terra
 terse
